# echus-old

./: .gitmodules  CMakeLists.txt  README.md
projects/echus-exe/src/: GUI.hpp  Main.cpp
projects/echus-lib/include/echus/: Echus.hpp  Instruments.hpp  Math.hpp  Music.hpp  SoundMachine.hpp  Synthesis.hpp
projects/echus-lib/src/: Echus.cpp  SoundMachine.cpp
